[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Models/scene/flower_wall_blue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Effects/fx_hit_particle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scripts/Shot.gd" type="Script" id=3]
[ext_resource path="res://Assets/Models/export files/vfx/seed.tres" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/Textures/VFX/leaf.png" type="Texture" id=6]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.909804, 0.560784, 0.984314, 1 )
roughness = 0.61
emission_enabled = true
emission = Color( 0.866667, 0.376471, 0.984314, 1 )
emission_energy = 2.87
emission_operator = 0
emission_on_uv2 = false
rim_enabled = true
rim = 0.84
rim_tint = 0.64

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.028048, 0.0353898, 0.0365846 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.904907, 0.359375, 1, 1, 0.826813, 0.113281, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.410227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
direction = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.14
angular_velocity = 422.7
angle = -178.2
scale = 0.83
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )

[sub_resource type="Animation" id=11]
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MeshRect:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, -90 ), Vector3( -1080, 90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.25, 0.37, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.122467, 0.122467, 0.154369 ), Vector3( 0.07, 0.07, 0.1 ), Vector3( 0.122467, 0.122467, 0.154369 ), Vector3( 0.07, 0.07, 0.1 ), Vector3( 0.122467, 0.122467, 0.154369 ) ]
}

[node name="Bullet_Player" type="RigidBody" groups=[
"Bullet",
]]
collision_layer = 256
collision_mask = 2147487886
gravity_scale = 0.65
continuous_cd = true
linear_damp = 2.0
script = ExtResource( 3 )
flower = ExtResource( 1 )
particle = ExtResource( 2 )

[node name="MeshRect" type="MeshInstance" parent="."]
transform = Transform( 2.33996e-16, -5.3532e-09, 0.154369, -0.122467, -5.3532e-09, 0, 5.3532e-09, -0.122467, -6.74767e-09, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = ExtResource( 5 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00684105, -0.0453627 )
shape = SubResource( 2 )

[node name="Hit_Detect_Area" type="Area" parent="." groups=[
"Player_Bullet",
]]
transform = Transform( 2.19694, 0, 0, 0, 2.19694, 0, 0, 0, 2.19694, 0, 0, -0.191045 )
collision_layer = 256
collision_mask = 4238

[node name="CollisionShape" type="CollisionShape" parent="Hit_Detect_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0277001 )
shape = SubResource( 3 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 2.19693, 0, 0, 0, 2.19695, 0, 0, 0, 2.19695, 0.00520408, -0.00467628, 0.102666 )
lifetime = 0.78
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shoot"
anims/shoot = SubResource( 11 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.517989, -0.391382, -0.518833, 0.871916, 0.801319, 1.03767 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_Player_body_entered"]
[connection signal="body_entered" from="Hit_Detect_Area" to="." method="_on_Hit_Detect_Area_body_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
